# OOPS-2D

./: CMakeLists.txt  README.md
MeshTest/: CMakeLists.txt
MeshTest/include/: meshparameters.h  meshparser.h
MeshTest/pars/: mesh.par
MeshTest/scripts/: mesh.json
MeshTest/src/: main.cpp  meshparameters.cpp  meshparser.cpp
ParameterTest/: CMakeLists.txt
ParameterTest/include/: testparameters.h  testparser.h
ParameterTest/pars/: test.par
ParameterTest/scripts/: test.json
ParameterTest/src/: main.cpp  testparameters.cpp  testparser.cpp
PolarTest/: CMakeLists.txt
PolarTest/include/: wave.h  waveparameters.h
PolarTest/pars/: wave.par
PolarTest/scripts/: wave.json
PolarTest/src/: main.cpp  wave.cpp  waveparameters.cpp  waveparser.cpp
WaveTest/: CMakeLists.txt
WaveTest/include/: wave.h  waveparameters.h
WaveTest/pars/: test.par
WaveTest/scripts/: wave.json
WaveTest/src/: main.cpp  wave.cpp  waveparameters.cpp  waveparser.cpp
include/: base64.h  domain.h  fieldmap.h  grid.h  mpicommunicator.h  ode.h  odedata.h  oopsconfig.h  oopsconfig.h.in  operators.h  output.h  paramreader.h  rk4.h  solver.h  solverdata.h  types.h
scripts/: genParams.py
src/: base64.cpp  domain.cpp  fieldmap.cpp  grid.cpp  mpicommunicator.cpp  ode.cpp  odedata.cpp  output.cpp  paramreader.cpp  rk4.cpp  rkck.cpp  solverdata.cpp
